--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     
     
 </head>
@@ -14,7 +14,7 @@
     <button id="new-btn">New Game</button>
   </div>
  <main>
-  <h1>Tic Tac Tao</h1>
+  <h1 class="heading">Tic Tac Tao</h1>
   <div class="container">
     <div class="Game">
       <button class="box"></button>
@@ -32,11 +32,14 @@
   </div>
   <Button id="reset-btn">Reset Game</Button>
 </main>
- <script src="TicTacToe.js"></script>
+ <script src="app.js"></script>
 
 </body>
 
 </html>
+
+
+
 
 
 
